2007-09-01  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-database-chooser.c:
	* libgdict/gdict-strategy-chooser.c:
	* libgdict/gdict-speller.c: Use the new GtkTooltip API in place
	of the old GtkTooltips one.

	* src/gdict-applet.c:
	* src/gdict-source-dialog.c:
	* src/gdict-pref-dialoc.c: Ditto as above.

2007-08-28  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-about.c:
	* src/gdict-app.c:
	* src/gdict-applet.c:
	* data/gnome-dictionary.desktop.in.in:
	* data/Makefile.am: Use the gnome-icon-theme icon for the dictionary
	instead of our own. (#470287, Michael Monreal)

2007-08-27  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-client-context.c: Use g_shell_quote() to escape
	the words to look up. (#432968)

2007-08-27  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (lookup_word): Remove leading and trailing
	whitespace from the content of the lookup entry before feeding
	it to the GdictContext. (#432968)

2007-08-18  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-client-context.c: Handle decomposed strings
	when querying the dictionary server. (#419894, Denis Jacquerye)

2007-08-18  Emmanuele Bassi  <ebassi@gnome.org>

	Out of tree build cleanups. (#414013, Loic Minier)

	* src/Makefile.am: Add missing -I flag for out of tree builds.

	* libgdict/gdict.h: Full include.

	* libgdict/gdict-version.h.in: Protect expanded version numbers.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-client-context.c: Destroy the current command,
	if present, when we are forcing a disconnection. (should fix
	#406119 and duplicates, when we get garbage from the server)

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c: Set the page of the sidebar only if we
	have one coming from GConf.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-applet.c: Hide the find pane when hiding the
	window.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/*.[ch]: Add more documentation.
