@@ -1,3 +1,8 @@
+2007-09-03  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* libgdict/gdict.h: Fix the general header inclusions: we install
+	into ${includedir}/gdict-1.0/gdict, not libgdict.
+
 2007-09-01  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* libgdict/gdict-database-chooser.c:
